Ignore domains list

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -1,16 +1,30 @@
 <!DOCUMENT html>
-<html lang="ru">
-    <head>
-        <title>DNS Proxy</title>
-        <meta charset="utf-8">
-        <meta content="IE=edge" http-equiv="X-UA-Compatible">
-        <meta content="width=device-width,initial-scale=1,shrink-to-fit=no" name="viewport">
-        <meta content="notranslate" name="google">
-        <meta content="#ffffff" name="theme-color">
-        <link href="/css/app.css" rel="stylesheet" as="style" type="text/css">
-    </head>
-    <body>
-        <div id="app">Loading...</div>
-        <script src="/js/app.js" type="application/javascript"></script>
-    </body>
+<html lang="en">
+<head>
+    <title>DNS Proxy</title>
+    <meta content="#ffffff" name="theme-color">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="/css/app.css" rel="stylesheet" as="style" type="text/css" media="screen,projection">
+    <style type="text/css">html, body {
+        height: 100vh;
+    }</style>
+</head>
+<body>
+<div id="app" class="loader-start">
+    <div class="preloader-wrapper active">
+        <div class="spinner-layer spinner-red-only">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div>
+            <div class="gap-patch">
+                <div class="circle"></div>
+            </div>
+            <div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="/js/app.js" type="application/javascript"></script>
+</body>
 </html>
