--- a/web/app/index.html
+++ b/web/app/index.html
@@ -1,8 +1,8 @@
 <!DOCUMENT html>
 <html lang="en">
 <head>
-    <title>DNS Proxy</title>
-    <meta content="#ffffff" name="theme-color">
+    <title>Easy DNS</title>
+    <meta content="#4a148c" name="theme-color"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="/css/app.css" rel="stylesheet" as="style" type="text/css" media="screen,projection">
     <style type="text/css">html, body {
